# wakatui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/api/: client.rs  models.rs
src/auth/: controller.rs  mod.rs  storage.rs
src/ui/: api_key.rs  authenticated.rs  intro.rs  mod.rs
src/ui/screens/: input.rs  main.rs  mod.rs
src/ui/widgets/: footer.rs  header.rs  mod.rs  projects.rs  statistics.rs  today.rs
