[package]
name = "wakatui"
version = "0.1.0"
description = "A TUI for viewing your Wakatime statistics"
authors = ["mshirlaw"]
license = "MIT"
edition = "2024"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
http = "1.1"
keyring = "2.3.2"
rand = "0.8.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
url = "2.5.2"
webbrowser = "0.8.12"

[dev-dependencies]
mockito = "1.4"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
